:full_moon_with_face: solve wrap problem in channel list :full_moon_with_face:

--- a/Frontend/src/components/ShowChannelList/ShowChannelList.module.scss
+++ b/Frontend/src/components/ShowChannelList/ShowChannelList.module.scss
@@ -4,9 +4,10 @@
   flex-wrap: wrap;
   width: 100%;
   align-content: flex-start;
+  margin-top: 70px;
   .card {
     height: 200px;
-    width: 20%;
+    width: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
